	rt_split_cmd() -> bu_argv_from_string() [deprecated 7.12]
src/rt/viewarea.c
	terminology and output format [deprecated 7.12]
include/raytrace.h
	RT_HIT_NORM -> RT_HIT_NORMAL [deprecated 7.12]

pre 7.0
-------
include/raytrace.h
	struct hit.hit_point -> RT_HIT_POINT [deprecated pre-7.0]
	struct hit.hit_normal -> RT_HIT_NORMAL [deprecated pre-7.0]


************
* OBSOLETE *
************
7.24.0
------
src/other/jove
	jove -> emacs [deprecated 7.14]
include/bu.h
	bu_get_load_average(), remove [deprecated 7.12]
	bu_fopen_uniq -> fopen [deprecated 7.14]

7.22.0
------
include/bu.h
	%S format specifier -> %V format specifier for bu_vls [deprecated 7.14]

7.20.2
------
cat-fb
	obsolete hardware
include/vmath.h
	ELEMENTS_PER_PT -> ELEMENTS_PER_POINT [deprecated 7.12]
	HVECT_LEN -> ELEMENTS_PER_HVECT [deprecated 7.12]
	HPT_LEN -> ELEMENTS_PER_HPOINT [deprecated 7.12]

7.20.0
------
include/bu.h
	bu_mro and related macros -> bu_attribute_value_set

7.18.2
------
include/raytrace.h
	RT_HIT_NORM -> RT_HIT_NORMAL [deprecated pre-7.0]
g-shell.rect
	g-shell.rect renamed to g-shell-rect [minor tool rename]

7.18.0
------
include/raytrace.h
	db_free_external -> bu_free_external [deprecated pre-7.0]
include/wdb.h
	mk_fastgen_region() -> mk_comb() [deprecated 7.12]
src/librt/bomb.c
	rt_bomb() -> bu_bomb() [deprecated 7.10]
include/machine.h
	machine.h -> common.h && bu.h [deprecated 7.10]
src/vas4
	vas4, remove [deprecated 7.12]

7.16.4
------
include/raytrace.h
	get_solidbitv() -> rt_get_solidbitv() [deprecated 7.16]

7.14.4
------
include/pkg.h
	uses size_t for lengths in API calls
include/bu.h
	bu_association() [unused]

7.14.0
------
include/raytrace.h
	GET_HITMISS -> NMG_GET_HITMISS
mged
	edcolor -> color -e
include/vmath.h
	PI -> M_PI
	M_SQRT2_DIV2 -> M_SQRT1_2

7.12.6
------
mged
	binary -> bo [rename]

7.12.4
------
include/mater.h
	rt_material_head -> rt_material_head()  [deprecated 7.12]
include/raytrace.h
	removed iterator from NMG_CK_HITMISS_LIST
include/bu.h